@@ -1566,6 +1566,8 @@ class depgraph(object):
 		self.edebug = 0
 		if settings.get("PORTAGE_DEBUG", "") == "1":
 			self.edebug = 1
+		if "--nodeps" in myopts:
+			spinner.update = spinner.update_quiet
 		self.spinner = spinner
 		self.pkgsettings = {}
 		# Maps slot atom to package for each Package added to the graph.
@@ -1713,8 +1715,9 @@ class depgraph(object):
 
 		msg = []
 		msg.append("\n!!! Multiple versions within a single " + \
-			"package slot have been \n")
-		msg.append("!!! pulled into the dependency graph:\n\n")
+			"package slot have been pulled\n")
+		msg.append("!!! into the dependency graph, resulting" + \
+			" in a slot conflict:\n\n")
 		indent = "  "
 		# Max number of parents shown, to avoid flooding the display.
 		max_parents = 3
@@ -2753,7 +2756,10 @@ class depgraph(object):
 						# here, packages that have been masked since they
 						# were installed can be automatically downgraded
 						# to an unmasked version.
-						if not visible(pkgsettings, pkg):
+						try:
+							if not visible(pkgsettings, pkg):
+								continue
+						except portage.exception.InvalidDependString:
 							continue
 					if not built and not calculated_use:
 						# This is avoided whenever possible because
@@ -4465,9 +4471,13 @@ class depgraph(object):
 					arg = None
 				if arg:
 					return False
-			if pkg.installed and \
-				not visible(self._depgraph.pkgsettings[pkg.root], pkg):
-				return False
+				if pkg.installed:
+					try:
+						if not visible(
+							self._depgraph.pkgsettings[pkg.root], pkg):
+							return False
+					except portage.exception.InvalidDependString:
+						pass
 			return True
 
 		def _dep_expand(self, atom):
@@ -6339,7 +6349,7 @@ def action_metadata(settings, portdb, myopts):
 	ec = portage.eclass_cache.cache(portdb.porttree_root)
 	myportdir = os.path.realpath(settings["PORTDIR"])
 	cm = settings.load_best_module("portdbapi.metadbmodule")(
-		myportdir, "metadata/cache", portage.auxdbkeys[:])
+		myportdir, "metadata/cache", portage.auxdbkeys[:], readonly=True)
 
 	from portage.cache import util
 
