@@ -1348,6 +1348,7 @@ class dblink(object):
 		unmerge_orphans = "unmerge-orphans" in self.settings.features
 
 		if pkgfiles:
+			self.updateprotect()
 			mykeys = pkgfiles.keys()
 			mykeys.sort()
 			mykeys.reverse()
