@@ -35,6 +35,12 @@ portage-2.2
 portage-2.1.5
 ==================================
 
+* The metadata-transfer feature is now disabled by default. This disables the
+  "Updating Portage cache" routine that used to run at the tail end of each
+  `emerge --sync` operation. If you use something like the sqlite module and
+  want to keep all metadata in that format alone (useful for querying), enable
+  FEATURES="metadata-transfer" in make.conf.
+
 * The parallel-fetch feature is now enabled by default. It is optimized
   to avoid doing redundant checksums for previously downloaded files that have
   the correct size. Run `tail -f /var/log/emerge-fetch.log` in a
